// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configs diff 1`] = `
{
  "overrides": [
    {
      "files": [
        "*",
      ],
      "processor": "@forivall/diff/diff",
    },
  ],
  "plugins": [
    "@forivall/diff",
  ],
}
`;

exports[`configs staged 1`] = `
{
  "overrides": [
    {
      "files": [
        "*",
      ],
      "processor": "@forivall/diff/staged",
    },
  ],
  "plugins": [
    "@forivall/diff",
  ],
}
`;

exports[`processors diff postprocess 1`] = `
[
  {
    "column": 1,
    "line": 2,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
  {
    "column": 1,
    "line": 3,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
]
`;

exports[`processors staged postprocess 1`] = `
[
  {
    "column": 1,
    "line": 2,
    "message": "Expected { after 'if' condition.",
    "messageId": "missingCurlyAfterCondition",
    "nodeType": "IfStatement",
    "ruleId": "curly",
    "severity": 1,
  },
]
`;
